<resources>
    <string name="desc_user_icon">ICONE DO USUARIO</string>
    <string name="app_name">SocialFit</string>
    <string name="nome">NOME</string>
    <string name="usuario">USUÁRIO</string>
    <string name="telefone">TELEFONE</string>
    <string name="senha">SENHA</string>
    <string name="email">EMAIL</string>
    <string name="usuario_lower">Usuário</string>
    <string name="nome_lower">Nome</string>
    <string name="telefone_lower">Telefone</string>
    <string name="email_lower">Email</string>
    <string name="senha_lower">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Fazer Login</string>
    <string name="temconta">Já tem uma conta?</string>
    <string name="naotemconta">Não tem uma conta?</string>
    <string name="irparacadastro">Cadastre-se</string>
    <string name="open_nav">Abrir sidebar</string>
    <string name="close_nav">Fechar sidebar</string>
    <string name="logout">Logout</string>
</resources>