<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="325dp"
        android:layout_height="379dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="283dp"
        android:layout_height="211dp"
        android:layout_marginTop="476dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/usuario"
        android:fontFamily="@font/baloo"
        android:text="@string/usuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="23sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="208dp"
        android:layout_height="34dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="432dp"
        android:fontFamily="@font/baloo"
        android:text="@string/temconta"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="23sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/nome"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/telefone"
        android:fontFamily="@font/baloo"
        android:text="@string/telefone"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="23sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="308dp"
        android:contentDescription="@string/senha"
        android:fontFamily="@font/baloo"
        android:text="@string/senha"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="23sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="244dp"
        android:contentDescription="@string/email"
        android:fontFamily="@font/baloo"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="23sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/tvUsuario"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="104dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/usuario_lower"
        android:inputType="text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/tvNome"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/nome_lower"
        android:inputType="text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="232dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/email_lower"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/tvSenha"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="296dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/senha_lower"
        android:inputType="textPassword"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/tvTelefone"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/rounded_input"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/telefone_lower"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/btnCadastrar"
        style="@style/buttonStyle"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="376dp"
        android:text="@string/cadastrar"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnLoginCadastrar"
        style="@style/buttonStyle"
        android:layout_width="201dp"
        android:layout_height="58dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="464dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_border"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/desc_user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_icon" />

    <ImageView
        android:id="@+id/btnHome"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_icon"
        tools:layout_editor_absoluteX="350dp" />

    <Button
        android:id="@+id/btnCasa"
        android:layout_width="69dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:text="Button"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="337dp"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>