<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/cadastroContainer"
        android:layout_width="355dp"
        android:layout_height="376dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="283dp"
        android:layout_height="211dp"
        android:layout_marginTop="296dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/usuario"
        android:fontFamily="@font/baloo"
        android:text="@string/usuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="23sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/cadastroContainer"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="208dp"
        android:layout_height="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="41dp"
        android:fontFamily="@font/baloo"
        android:text="@string/temconta"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="23sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/nome"
        app:layout_constraintStart_toStartOf="@+id/cadastroContainer"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/telefone"
        android:fontFamily="@font/baloo"
        android:text="@string/telefone"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="23sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/cadastroContainer"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="308dp"
        android:contentDescription="@string/senha"
        android:fontFamily="@font/baloo"
        android:text="@string/senha"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="23sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/cadastroContainer"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="244dp"
        android:contentDescription="@string/email"
        android:fontFamily="@font/baloo"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="23sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/cadastroContainer"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer" />

    <EditText
        android:id="@+id/tvUsuario"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="104dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/usuario_lower"
        android:inputType="text"
        android:maxLength="15"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/cadastroContainer"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer" />

    <EditText
        android:id="@+id/tvNome"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/nome_lower"
        android:inputType="text"
        android:maxLength="30"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/cadastroContainer"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer" />

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="232dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/email_lower"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/cadastroContainer"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer" />

    <EditText
        android:id="@+id/tvSenha"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="296dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/senha_lower"
        android:inputType="textPassword"
        android:maxLength="30"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/cadastroContainer"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer" />

    <EditText
        android:id="@+id/tvTelefone"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/rounded_input"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/telefone_lower"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="12"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/cadastroContainer"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer" />

    <Button
        android:id="@+id/btnCadastrar"
        style="@style/buttonStyle"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="358dp"
        android:layout_marginEnd="91dp"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="@+id/cadastroContainer"
        app:layout_constraintStart_toStartOf="@+id/cadastroContainer"
        app:layout_constraintTop_toTopOf="@+id/cadastroContainer"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnIrLogin"
        style="@style/buttonStyle"
        android:layout_width="201dp"
        android:layout_height="58dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="41dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/circle_border"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/desc_user_icon"
        app:layout_constraintBottom_toTopOf="@+id/cadastroContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/user_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>