<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="361dp"
        android:layout_height="296dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="297dp"
        android:layout_height="204dp"
        android:layout_marginTop="416dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgUser2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/desc_user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_icon" />

    <TextView
        android:id="@+id/textView7"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="235dp"
        android:text="@string/usuario"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView8"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="259dp"
        android:text="@string/senha"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/tvUsuario"
        style="@style/textBoxStyle"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="6dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usuario_lower"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/tvSenha"
        style="@style/textBoxStyle"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="11dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/senha_lower"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/buttonStyle"
        android:layout_width="181dp"
        android:layout_height="58dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="84dp"
        android:fontFamily="@font/baloo"
        android:text="@string/login"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/btnIrCadastrar"
        style="@style/buttonStyle"
        android:layout_width="212dp"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/baloo"
        android:text="@string/cadastrar"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/textView9"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:text="@string/naotemconta"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

</androidx.constraintlayout.widget.ConstraintLayout>